--- a/samples/Support4Demos/src/com/example/android/supportv4/app/_index.html
+++ b/samples/Support4Demos/src/com/example/android/supportv4/app/_index.html
@@ -44,6 +44,11 @@ and loaders.</p>
   <dt><a href="FragmentMenuSupport.html">Fragment Menu</a></dt>
   <dd>Demonstrates populating custom menu items from a Fragment.</dd>
   
+  <dt><a href="FragmentPagerSupport.html">Fragment Pager Support</a></dt>
+  <dd>A support class for using the Fragment APIs to build
+   a user interface where the user can fling left or right to switch
+   between fragments.</dd>
+
   <dt><a href="FragmentReceiveResultSupport.html">Fragment Receive Result</a></dt>
   <dd>Demonstrates starting a new Activity from a Fragment, and receiving
   a result back from it.</dd>
