Update pager demos to match new v4 ViewPager API.
Change-Id: I3b0f3382d56b477868b5a5fbf5af22fa83c3e06a

--- a/samples/Support13Demos/src/com/example/android/supportv13/app/_index.html
+++ b/samples/Support13Demos/src/com/example/android/supportv13/app/_index.html
@@ -9,7 +9,12 @@ package features of the static support library fir API 13 or later.
 <h3 id="Fragment">Fragment</h3>
 <dl>
   <dt><a href="FragmentPagerSupport.html">Fragment Pager Support</a></dt>
-  <dd>A support class for using the framework Fragment APIs to build
-   a user interface where the user can fling left or right to switch
-   between fragments.</dd>
+  <dd>Demonstrates the use of the v4 support class ViewPager with a
+  FragmentPagerAdapter to build a user interface where the user can fling
+  left or right to switch between fragments.</dd>
+  <dt><a href="FragmentStatePagerSupport.html">Fragment State Pager Support</a></dt>
+  <dd>Demonstrates the use of the v4 support class ViewPager with a
+  FragmentStatePagerAdapter to build a user interface where the user can fling
+  left or right to switch between fragments.  This versions of the adapter
+  doesn't keep around the fragment instances that ViewPager has destroyed.</dd>
 </dl>
