--- a/samples/Support4Demos/src/com/example/android/supportv4/app/_index.html
+++ b/samples/Support4Demos/src/com/example/android/supportv4/app/_index.html
@@ -45,9 +45,15 @@ and loaders.</p>
   <dd>Demonstrates populating custom menu items from a Fragment.</dd>
   
   <dt><a href="FragmentPagerSupport.html">Fragment Pager Support</a></dt>
-  <dd>A support class for using the Fragment APIs to build
-   a user interface where the user can fling left or right to switch
-   between fragments.</dd>
+  <dd>Demonstrates the use of the support class ViewPager with a
+  FragmentPagerAdapter to build a user interface where the user can fling
+  left or right to switch between fragments.</dd>
+
+  <dt><a href="FragmentStatePagerSupport.html">Fragment State Pager Support</a></dt>
+  <dd>Demonstrates the use of the support class ViewPager with a
+  FragmentStatePagerAdapter to build a user interface where the user can fling
+  left or right to switch between fragments.  This versions of the adapter
+  doesn't keep around the fragment instances that ViewPager has destroyed.</dd>
 
   <dt><a href="FragmentReceiveResultSupport.html">Fragment Receive Result</a></dt>
   <dd>Demonstrates starting a new Activity from a Fragment, and receiving
