New API demos showing use of tabs with fragments.
Also various cleanup in other demos.

Change-Id: I4f5669117e28312bcd4b28795c5eca5f4ab6dcfb

--- a/samples/Support4Demos/src/com/example/android/supportv4/app/_index.html
+++ b/samples/Support4Demos/src/com/example/android/supportv4/app/_index.html
@@ -67,6 +67,15 @@ and loaders.</p>
   <dd>Demonstrates creating a stack of Fragment instances similar to the
   traditional stack of activities.</dd>
   
+  <dt><a href="FragmentTabs.html">Fragment Tabs</a></dt>
+  <dd>Demonstrates the use of fragments to implement switching between
+  tabs in a TabHost.</dd>
+
+  <dt><a href="FragmentTabsPager.html">Fragment Tabs Pager</a></dt>
+  <dd>Demonstrates the use of fragments to implement switching between
+  tabs in a TabHost, using a ViewPager to manager the fragments so that
+  the user can also fling left and right to switch tabs.</dd>
+
 </dl>
 
 <h3 id="LoaderManager">LoaderManager</h3>
@@ -74,6 +83,10 @@ and loaders.</p>
   <dt><a href="LoaderCursorSupport.html">Loader Cursor</a></dt>
   <dd>Demonstrates use of LoaderManager to perform a query for a Cursor that
   populates a ListFragment.</dd>
+
+  <dt><a href="LoaderCustomSupport.html">Loader Custom</a></dt>
+  <dd>Demonstrates implementation and use of a custom Loader class.  The
+  custom class here "loads" the currently installed applications.</dd>
   
   <dt><a href="LoaderThrottleSupport.html">Loader Throttle</a></dt>
   <dd>Complete end-to-end demonstration of a simple content provider that
