--- a/samples/Support4Demos/_index.html
+++ b/samples/Support4Demos/_index.html
@@ -1,5 +1,5 @@
 <p>The Support v4 Demos application contains a variety of small sample
-code showing how to use key features of the support library.
+code showing how to use key features of the Android API 4+ Support Library.
 This library contains code that you can
 build in to your application to access new features and common
 utilities while being able to run down to version 1.6 (API 4)
