SDK only: add documentation tags.
Also fix up the new support API demo documentation.

Change-Id: I7a6945ffafa6a93cd394d5ce5729d6f9dfc0a183

--- a/samples/Support13Demos/_index.html
+++ b/samples/Support13Demos/_index.html
@@ -1,8 +1,8 @@
-<p>The Support v4 Demos application contains a variety of small sample
-code showing how to use key features of the support library.
+<p>The Support v13 Demos application contains a variety of small sample
+code showing how to use key features of the Android API 13+ Support Library.
 This library contains code that you can
 build in to your application to access new features and common
-utilities while being able to run down to version 1.6 (API 4)
+utilities while being able to run down to version 3.2 (API 13)
 of the platform.
 </p>
 
