Add new API demos for fragment custom animations.
Change-Id: Ia4339d4e4c1617907a9c707e1b8c2309b303e267

--- a/samples/Support4Demos/src/com/example/android/supportv4/app/_index.html
+++ b/samples/Support4Demos/src/com/example/android/supportv4/app/_index.html
@@ -23,6 +23,10 @@ and loaders.</p>
   <dd>Demonstrates how to display and respond to a context menu that is
   display from a fragment's view hierarchy.</dd>
   
+  <dt><a href="FragmentCustomAnimationSupport.html">Fragment Custom Animation</a></dt>
+  <dd>Demonstrates the use of a custom animation for pushing and popping fragments
+  on the back stack.</dd>
+
   <dt><a href="FragmentDialogSupport.html">Fragment Dialog</a></dt>
   <dd>Demonstrates use of DialogFragment to show various types of dialogs.</dd>
   
