SDK only: fix up support documentation and visibility.
Now that the support library appears in the SDK documentation,
it is worth cleaning up some of its java docs.

Change-Id: I63d4d04be8ee69abf9385597fddbddcaa030477f

--- a/v4/java/android/support/v4/app/package.html
+++ b/v4/java/android/support/v4/app/package.html
@@ -1,5 +1,8 @@
 <body>
 
-Support classes to access some of the android.app package features introduced after API level 4 in a backwards compatible fashion.
+Support android.app classes to assist with development of applications for
+android API level 4 or later.  The main features here are backwards-compatible
+versions of {@link android.support.v4.app.FragmentManager} and
+{@link android.support.v4.app.LoaderManager}.
 
 </body>
