--- a/v4/java/android/support/v4/content/package.html
+++ b/v4/java/android/support/v4/content/package.html
@@ -1,5 +1,10 @@
 <body>
 
-Support classes to access some of the android.content package features introduced after API level 4 in a backwards compatible fashion.
+Support android.content classes to assist with development of applications for
+android API level 4 or later.  The main features here are
+{@link android.support.v4.content.Loader} and related classes and
+{@link android.support.v4.content.LocalBroadcastManager} to
+provide a cleaner implementation of broadcasts that don't need to go outside
+of an app.
 
 </body>
