--- a/v4/java/android/support/v4/widget/package.html
+++ b/v4/java/android/support/v4/widget/package.html
@@ -1,5 +1,8 @@
 <body>
 
-Support classes to access some of the android.widget package features introduced after API level 4 in a backwards compatible fashion.
+Support android.widget classes to assist with development of applications for
+android API level 4 or later.  This includes a complete modern implementation
+of {@link android.support.v4.widget.CursorAdapter} and related classes, which
+is needed for use with {@link android.support.v4.content.CursorLoader}.
 
 </body>
