--- a/v4/java/android/support/v4/content/pm/package.html
+++ b/v4/java/android/support/v4/content/pm/package.html
@@ -1,5 +1,6 @@
 <body>
 
-Support classes to access some of the android.content.pm package features introduced after API level 4 in a backwards compatible fashion.
+Support android.content.pm classes to assist with development of applications for
+android API level 4 or later.
 
 </body>
